[gd_scene load_steps=5 format=3 uid="uid://b60qs6jc07tbj"]

[ext_resource type="Script" path="res://world/interactable/activators/switch/switch.gd" id="1_8l6ln"]
[ext_resource type="Texture2D" uid="uid://bxj0hjaohgmgm" path="res://world/interactable/activators/switch/SwitchOn.png" id="2_xly8v"]
[ext_resource type="Texture2D" uid="uid://s5m0f0pnh0tp" path="res://world/interactable/activators/switch/SwitchOff.png" id="3_4s8vk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myfof"]
size = Vector2(97, 97)

[node name="Switch" type="Area2D" groups=["Activator"]]
collision_layer = 64
collision_mask = 4
script = ExtResource("1_8l6ln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_myfof")

[node name="OnSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(4.76837e-07, -45.25)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_xly8v")

[node name="OffSprite" type="Sprite2D" parent="."]
position = Vector2(4.76837e-07, -45.25)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_4s8vk")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
